// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPageBlocks AudioPlayer should render correctly for amp 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"AudioObject","name":"ماښامنۍ خپرونه","description":"د بي بي سي ورلډ سروس څخه پروګرام کول","duration":"PT29M30S","thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg","uploadDate":"2020-04-23T15:30:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/korean/externalId/id/ko/amp?morph_env=live"}
    </script>
  </head>
  <body>
    .c1 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c0 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width:63rem) {
  .c1 {
    margin-bottom: 2rem;
  }
}

@media (min-width:25rem) {
  .c0 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/korean/externalId/id/ko/amp?morph_env=live"
            title="오디오 플레이어"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="http://localhost:7080/images/amp_audio_placeholder.png"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer should render correctly for canonical 1`] = `
.c1 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c0 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

.c2 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c1 {
    margin-bottom: 2rem;
  }
}

@media (min-width:25rem) {
  .c0 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"AudioObject","name":"ماښامنۍ خپرونه","description":"د بي بي سي ورلډ سروس څخه پروګرام کول","duration":"PT29M30S","thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg","uploadDate":"2020-04-23T15:30:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/korean/externalId/id/ko?morph_env=live"}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <iframe
            allow="autoplay; fullscreen"
            allowfullscreen=""
            class="c2"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/korean/externalId/id/ko?morph_env=live"
            title="오디오 플레이어"
          />
          <noscript />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer when externalId is bbc_oromo_radio it is overriden to bbc_afaanoromoo_radio should render correctly for amp 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"AudioObject","name":"ماښامنۍ خپرونه","description":"د بي بي سي ورلډ سروس څخه پروګرام کول","duration":"PT29M30S","thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg","uploadDate":"2020-04-23T15:30:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp?morph_env=live"}
    </script>
  </head>
  <body>
    .c1 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c0 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width:63rem) {
  .c1 {
    margin-bottom: 2rem;
  }
}

@media (min-width:25rem) {
  .c0 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp?morph_env=live"
            title="Audio player"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="http://localhost:7080/images/amp_audio_placeholder.png"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer when externalId is bbc_oromo_radio it is overriden to bbc_afaanoromoo_radio should render correctly for canonical 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"AudioObject","name":"ماښامنۍ خپرونه","description":"د بي بي سي ورلډ سروس څخه پروګرام کول","duration":"PT29M30S","thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg","uploadDate":"2020-04-23T15:30:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om?morph_env=live"}
    </script>
  </head>
  <body>
    .c1 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c0 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

.c2 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c1 {
    margin-bottom: 2rem;
  }
}

@media (min-width:25rem) {
  .c0 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <iframe
            allow="autoplay; fullscreen"
            allowfullscreen=""
            class="c2"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om?morph_env=live"
            title="Audio player"
          />
          <noscript />
        </div>
      </div>
    </div>
  </body>
</html>
`;
